[kcms/tablet] Fix crash when opening KCM for the second time

DevicesModel is a global singleton, so it is still alive by the time we open the KCM for the second time

However, the model is not initialized a second time, so no devices are loaded and any attempt to access data will crash

To avoid this have the model as a member of the KCM class so it gets properly destroyed when the KCM is closed and recreated when opened again

BUG: 451233